manifests/argocd/canary/was-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout 
metadata:
  name: was
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was 
  template:
    metadata:
      labels: 
        app: was 
    spec:
      terminationGracePeriodSeconds: 5
      serviceAccountName: was-service-account
      containers:
      - name: was-go-bumblebee
        image:  herochinese/go-bumblebee-was:new-combo-jazz
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /ping
            port: 9010
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5        
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 9010
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
          - name: http
            containerPort: 9010
          - name: websocket
            containerPort: 9040
        resources:
          requests: 
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
  strategy:
    canary:
      canaryService: was-http-canary
      stableService: was-http-stable
      trafficRouting:
        istio:
          virtualService:
            name: was-http-vs
            routes:
              - primary
      steps:
        - setWeight: 5
        - pause: {}        
  revisionHistoryLimit: 2
---
apiVersion: v1
kind: Service
metadata:
  name: was-http-canary
spec: 
  type: ClusterIP
  selector:
    app: was
  ports:
  - name: http
    port: 9010
    targetPort: 9010 

---
apiVersion: v1
kind: Service
metadata:
  name: was-http-stable
spec: 
  type: ClusterIP
  selector:
    app: was
  ports:
  - name: http
    port: 9010
    targetPort: 9010
